tests/ui/traits/const-traits/const_derives/derive-const-use.stderr
error[E0277]: the trait bound `(): [const] PartialEq` is not satisfied
  --> $DIR/derive-const-use.rs:16:14
   |
LL | #[derive_const(Default, PartialEq)]
   |                         --------- in this derive macro expansion
LL | pub struct S((), A);
   |              ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
